# sdmp

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CNAME  README.md  dir_000000_000001.html  dir_000002_000001.html  dir_000003_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d75c23162a2652451dce46d2e7e8aead.html  dir_d75c23162a2652451dce46d2e7e8aead_dep.map  dir_d75c23162a2652451dce46d2e7e8aead_dep.md5  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e_dep.map  dir_e3d620c6b6fdb93ed3bc6186215bde2e_dep.md5  files.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_LICENSE.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacesdmp.html  namespacesdmp_1_1bb8.html  namespacesdmp_1_1bb8_1_1simple.html  pages.html  proto.html  sdmp_8hpp.html  sdmp_8hpp__dep__incl.map  sdmp_8hpp__dep__incl.md5  sdmp_8hpp__incl.map  sdmp_8hpp__incl.md5  sdmp_8hpp_source.html  (+1 more)
.github/workflows/: build.yaml
application/: main.cpp
include/: sdmp.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js
test/: test.cpp
